--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="color-scheme" content="light dark">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calculator</title>
-    <link rel="canonical" href="https://calcalpha.github.io/">
-    <link rel="stylesheet" href="src/calc.css">
-    <script type="module" src="src/calc.mjs"></script>
+    <link rel="canonical" href="https://yuukikonno.com/calc/">
+    <script src="dist/calc.js"></script>
   </head>
-  <body>
-    <input class="input" autofocus>
-    <div class="output-container">
-      <label class="output-label">
-        <output class="output"></output>
-      </label>
-    </div>
-  </body>
+  <body></body>
 </html>
