--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta name="color-scheme" content="light dark">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Calculator</title>
     <link rel="canonical" href="https://yuukikonno.com/calc/">
+    <link rel="stylesheet" href="dist/calc.css">
     <script src="dist/calc.js"></script>
   </head>
-  <body></body>
+  <body>
+    <form id="calc">
+      <p>
+        <input id="input" value="(1+2)+3">
+      </p>
+      <p>
+        <output id="output"></output>
+      </p>
+    </form>
+  </body>
 </html>
