--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <form id="calc">
       <p>
-        <input id="input" value="(1+2)+3">
+        <input id="input" value="((123+4)+56)">
       </p>
       <p>
         <output id="output"></output>
