--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Calculator</title>
     <link rel="canonical" href="https://yuukikonno.com/calc/">
     <link rel="stylesheet" href="dist/calc.css">
-    <script src="dist/calc.js"></script>
+    <script type="module" src="dist/calc.mjs"></script>
   </head>
   <body>
     <form id="calc">
